2006-08-03  Roman Kennke  <kennke@aicas.com>

	PR 27637
	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(ComponentHandler.componentResized): Reimplemented to handle
	arbitrary parents.
	(InternalFramePropertyChangeHandler.propertyChange): (Un)install
	component listener on changed ancestor.
	(installListeners): Install componentListener.
	(uninstallListeners): Uninstall componentListener.

2006-08-03  Carsten Neumann  <cn-develop@gmx.net>

	* StrictMath.java (cbrt): Return argument if it is a NaN.
	(cosh): Likewise.
	(expm1): Likewise.
	(sinh): Likewise.

2006-08-03  Carsten Neumann  <cn-develop@gmx.net>

	* java/lang/StrictMath.java (tanh): New method.

2006-08-03  Raif S. Naffah  <raif@swiftdsl.com.au>

	* scripts/import-cacerts.sh: Batch CA certificates import script.

2006-08-03  Roman Kennke  <kennke@aicas.com>

	PR 28571
	* gnu/java/awt/peer/gtk/GtkCanvasPeer.java
	(getPreferredSize): Renamed method to preferredSize(). That's
	the one that gets called from java.awt.*.
	* java/awt/peer/ComponentPeer.java
	(getPreferredSize): Added specnote about this method never
	beeing called in the RI.
	(getMinimumSize): Added specnote about this method never
	beeing called in the RI.

2006-08-03  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/ComponentGraphics.java
	(grab, nativeGrab): New methods.
	* include/gnu_java_awt_peer_gtk_ComponentGraphics.h
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphics.c
	(nativeGrab): New method.
	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
	(print): Implement.
	* java/awt/Component.java
	(printAll): Should call peer print method.
	
2006-08-02  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/GtkChoicePeer.java
	(remove): Force event on removing item 0 when it's selected.
	(handleEvent): Always call Choice.selected().
	* java/awt/Choice.java:
	(remove): Simplify and correct.

2006-08-02  Mark Wielaard  <mark@klomp.org>

	PR 28535
	* configure.ac (gconf-peer): Check for gdk-2.0.